--- a/css/ostrich.css
+++ b/css/ostrich.css
@@ -10,7 +10,7 @@ html {
 
 /* Write your solution here */
 
-@media only screen and (mix-width: 1310px) {
+@media only screen and (max-width: 1310px) {
   #ostrich {
    top: -50px;
  }
